# raps-examples

./: .gitignore  CODEBASE-REVIEW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: benchmarks.yml  nightly.yml  release-validation.yml  run-benchmarks.yml
benchmark-results/: metrics-report.md
benchmarks/auth-flows/: run.sh
benchmarks/automation-timing/: run.sh
benchmarks/design-automation/: run.sh
benchmarks/feature-validation/: run.sh
benchmarks/rust-vs-nodejs/: run.sh  (+3 more)
docs/: CLAUDE_CODE_TASK_PHOTOGRAMMETRY_GENERATOR.md  CLAUDE_CODE_TASK_RAPS_DOCKER_TESTS.md  CLI-COVERAGE-MATRIX.md  SECRETS-AUDIT.md  TEST-SILENT-FAILURES.md
runs/: CATALOG.md  run-all.ps1  run-all.sh
scripts/: analyze-log-failures.py  audit_secrets.py  generate-report.py  generate-run-report.py  generate-test-data.py  oauth-automate.py  photogrammetry_gen.py  run-all-benchmarks.sh
tests/: catalog.json  conftest.py  test_00_setup.py  test_01_auth.py  test_02_config.py  test_03_storage.py  test_04_data_management.py  test_05_model_derivative.py  test_06_design_automation.py  test_07_acc_issues.py  test_08_acc_rfi.py  test_09_acc_modules.py  test_10_webhooks.py  test_11_admin_users.py  test_12_admin_projects.py  test_13_admin_folders.py  test_14_reality_capture.py  test_15_reporting.py  test_16_templates.py  test_17_plugins.py  test_18_pipelines.py  test_19_api_raw.py  test_20_generation.py  test_21_shell_serve.py  test_22_demo.py  test_23_logs.py  test_30_workflows.py  test_99_cross_cutting.py  test_catalog.py  test_webapp.py
webapp/: index.html  main.py
(+80 files in other folders)
